--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,9 @@
   <properties>
     <mybatis.version>3.4.6</mybatis.version>
     <mybatis-spring.version>1.3.2</mybatis-spring.version>
-    <spring-boot.version>1.5.10.RELEASE</spring-boot.version>
+    <spring-boot.version>2.0.6.RELEASE</spring-boot.version>
+
+    <animal.sniffer.skip>true</animal.sniffer.skip>
   </properties>
 
   <dependencyManagement>
