--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,9 @@
   <properties>
     <mybatis.version>3.4.6</mybatis.version>
     <mybatis-spring.version>1.3.2</mybatis-spring.version>
-    <spring-boot.version>1.5.10.RELEASE</spring-boot.version>
+    <spring-boot.version>2.1.0.RC1</spring-boot.version>
+
+    <animal.sniffer.skip>true</animal.sniffer.skip>
   </properties>
 
   <dependencyManagement>
@@ -113,5 +115,18 @@
       </dependency>
     </dependencies>
   </dependencyManagement>
+
+  <repositories>
+    <repository>
+      <id>spring-milestones</id>
+      <url>https://repo.spring.io/milestone</url>
+    </repository>
+  </repositories>
+  <pluginRepositories>
+    <pluginRepository>
+      <id>spring-milestones</id>
+      <url>https://repo.spring.io/milestone</url>
+    </pluginRepository>
+  </pluginRepositories>
 
 </project>
